# code-explorer

./: .env.template  Makefile  README.md  pyproject.toml  run.py
src/busy_buddy/: __init__.py  main.py
src/busy_buddy/codebase_explorer/: README.md  __init__.py  agent.py  index.py  parsers.py  tools.py  utils.py
src/code_explorer/: README.md  __init__.py  agent.py  config.py  custom_model.py  index.py  main.py  models.py  tools.py
src/tests/: conftest.py  test_code_explorer.py  test_codebase_explorer.py
