[project]
name = "code_explorer"
version = "0.1.0"
description = "Code Explorer is an AI agent that can answer questions about codebases. It can be used to explore unfamiliar code, understand complex logic, and find specific implementations or patterns."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "networkx>=3.5",
  "numpy>=2.3.3",
  "pybloom-live>=4.0.0",
  "smolagents[openai,toolkit]>=1.21.3",
  "torch>=2.8.0",
  "transformers>=4.56.1",
  "tree-sitter==0.21.3", # Note: tree-sitter-languages requires tree-sitter==0.21.3
  "tree-sitter-languages>=1.10.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
